Try to fix Qualtrics alignment

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h2 {
     flex-direction: column;
     justify-content: flex-end;
     background-color: #dddddd;
+    direction: ltr;
 }
 
 .app {
@@ -26,6 +27,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    direction: ltr;
 }
 
 @keyframes spin {
@@ -220,6 +222,7 @@ h2 {
     flex-direction: row;
     width: 100%;
     justify-content: space-evenly;
+    direction: ltr;
 }
 
 .disable {
